--- a/styles/scss/article/_articleGrid.scss
+++ b/styles/scss/article/_articleGrid.scss
@@ -44,6 +44,15 @@
 
         .article-top-big-title {
           margin: rem(8px) 0;
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;  
+          overflow: hidden;
+          color: var(--color-white);
+
+          &:hover {
+            color: var(--color-secondary);
+          }
         }
 
         .article-top-big-detail {
@@ -84,7 +93,6 @@
 
     .article-top-card-detail {
       padding: rem(8px) rem(16px) rem(16px) rem(16px);
-      color: var(--color-text-primary);
       
       .article-top-card-detail-title {
         margin: rem(8px) 0;
@@ -92,6 +100,11 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;  
         overflow: hidden;
+        color: var(--color-text-primary);
+
+        &:hover {
+          color: var(--color-secondary);
+        }
       }
   
       .article-top-card-detail-title-sub {
